diesel_compile_tests/tests/fail/derive/bad_sqlite_type.stderr
error: unexpected end of input, expected parentheses
       help: the correct format looks like `#[diesel(sqlite_type(name = "foo"))]`
 --> tests/fail/derive/bad_sqlite_type.rs:6:21
  |
LL | #[diesel(sqlite_type)]
  |                     ^

error: expected attribute `name`
       help: the correct format looks like #[diesel(sqlite_type(name = "foo"))]
  --> tests/fail/derive/bad_sqlite_type.rs:11:22
   |
LL | #[diesel(sqlite_type())]
   |                      ^

error: expected parentheses
  --> tests/fail/derive/bad_sqlite_type.rs:16:22
   |
LL | #[diesel(sqlite_type = "foo")]
   |                      ^

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(sqlite_type(name = "foo"))]`
  --> tests/fail/derive/bad_sqlite_type.rs:21:26
   |
LL | #[diesel(sqlite_type(name))]
   |                          ^

error: expected `=`
  --> tests/fail/derive/bad_sqlite_type.rs:26:26
   |
LL | #[diesel(sqlite_type(name()))]
   |                          ^

error: expected string literal
  --> tests/fail/derive/bad_sqlite_type.rs:31:29
   |
LL | #[diesel(sqlite_type(name = Foo))]
   |                             ^^^

error: unknown attribute, expected `name`
  --> tests/fail/derive/bad_sqlite_type.rs:36:22
   |
LL | #[diesel(sqlite_type(what))]
   |                      ^^^^
